force-app/main/default/objects/Workout__c/Workout__c.object-meta.xml
<CustomObject>
    <label>Workout</label>
    <nameField>
        <label>Workout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>