force-app/main/default/objects/Workout__c/fields/Main_muscle__c.field-meta.xml
<CustomField>
    <fullName>Main_muscle__c</fullName>
    <label>Main muscle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Back and biceps</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Chest and triceps</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Leg</fullName>
            </value>
            <value>
                <fullName>Lower body</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Upper body</fullName>
            </value>
            <value>
                <fullName>Whole body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>