force-app/main/default/objects/Workout__c/fields/Total_calo_burned__c.field-meta.xml
<CustomField>
    <fullName>Total_calo_burned__c</fullName>
    <description>Sum total calories burned from all inclusive exercises</description>
    <inlineHelpText>Sum total calories burned from all inclusive exercises (for one set only)</inlineHelpText>
    <label>Total calo burned</label>
    <summarizedField>Exercise_Item__c.Calories_burned__c</summarizedField>
    <summaryForeignKey>Exercise_Item__c.Workout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>