force-app/main/default/objects/Workout__c/fields/Total_calo_burned_all_sets__c.field-meta.xml
<CustomField>
    <fullName>Total_calo_burned_all_sets__c</fullName>
    <formula>Total_calo_burned__c *  Total_Set__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total calories burned (all sets)</inlineHelpText>
    <label>Total calo burned all sets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>