force-app/main/default/objects/Workout__c/fields/Total_rest_time__c.field-meta.xml
<CustomField>
    <fullName>Total_rest_time__c</fullName>
    <inlineHelpText>Total rest time (for one set)</inlineHelpText>
    <label>Total rest time</label>
    <summarizedField>Exercise_Item__c.Rest__c</summarizedField>
    <summaryForeignKey>Exercise_Item__c.Workout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>