force-app/main/default/objects/Workout__c/fields/Total_Set__c.field-meta.xml
<CustomField>
    <fullName>Total_Set__c</fullName>
    <label>Total Set</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>