force-app/main/default/objects/Workout__c/fields/Total_workout_time__c.field-meta.xml
<CustomField>
    <fullName>Total_workout_time__c</fullName>
    <inlineHelpText>Total workout time for one set (rest excluded)</inlineHelpText>
    <label>Total workout time</label>
    <summarizedField>Exercise_Item__c.Time__c</summarizedField>
    <summaryForeignKey>Exercise_Item__c.Workout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>