force-app/main/default/objects/Workout__c/fields/Total_workout_time_all_set__c.field-meta.xml
<CustomField>
    <fullName>Total_workout_time_all_set__c</fullName>
    <formula>( Total_workout_time__c +  Total_rest_time__c ) *  Total_Set__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total workout time for all set (rest included)</inlineHelpText>
    <label>Total workout time all set</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>